kubernetes/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: cluster-project
  labels:
    app.kubernetes.io/name: cluster-project
    app.kubernetes.io/part-of: cluster-project
    app.kubernetes.io/managed-by: kubectl

    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
